<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Btn Blue</string>
    <string name="language">en</string>	
    <string name="appinfo_gen">Version: 1.01</string>
    <string name="appinfo_ezy">Version: 0.04</string>
	
	<string name="actMain_name">Btn Bluetooth Application</string>
	<string name="actMain_link_device_info_title">Selected Device :</string>
	<string name="actMain_link_device_service_uuid">Service\'s UUID：</string>
	<string name="actMain_find_service_uuids">Searching services list&#8230;</string>
	<string name="actMain_not_find_service_uuids">Not find services list.</string>
	<!--  <string name="actMain_device_info">%1$s</string> -->
	<string name="actMain_device_info">%1$s\n%2$s\n</string>
	<string name="actMain_btn_pair">Pair</string>
	<string name="actMain_btn_comm">Connect</string>
	<string name="actMain_tv_hint_service_uuid_not_bond">Please create pair.</string>
	<string name="actMain_tv_select_mode">Select communication mode</string>
	<string name="actMain_msg_does_not_support_uuid_service">Android version does not support this.</string>
	<string name="actMain_msg_bluetooth_Bonding">pairing&#8230;</string>
	<string name="actMain_msg_device_connecting">Connecting device&#8230;</string>
	<string name="actMain_msg_device_connect_fail">SPP communication failure</string>
	<string name="actMain_msg_device_connect_succes">Successful connection</string>
	<string name="actMain_msg_bluetooth_Bond_Success">Pairing successful</string>
	<string name="actMain_msg_bluetooth_Bond_fail">Pairing failed</string>
	<string name="actMain_msg_pair_pwd_error">The pairing password must be 4 digits</string>
	<string name="actMain_menu_rescan">Rescan</string>
	
	<string name="actDiscovery_name">Bluetooth app</string>
	<string name="actDiscovery_msg_select_device">Select the device you need to connect</string>
	<string name="actDiscovery_msg_not_find_device">Devices not found</string>
	<string name="actDiscovery_msg_scaning_device">Scanning&#8230;</string>
	<string name="actDiscovery_msg_starting_device">Bluetooth devices starting&#8230;</string>
	<string name="actDiscovery_msg_start_bluetooth_fail">Bluetooth devices start fail</string>
	<string name="actDiscovery_msg_bluetooth_not_start">Bluetooth is not enabled</string>
	<string name="actDiscovery_menu_scan">Scan</string>
	<string name="actDiscovery_bond_bonded">Bonded</string>
	<string name="actDiscovery_bond_nothing">Nothing</string>
	
	<string name="actByteStream_name">Byte stream mode</string>
	<string name="actByteStream_input_hint">input the send commands</string>
	<string name="actByteStream_btn_send_desc">Send button</string>
	<string name="actByteStream_tv_receive_text">Data receive</string>
	
	  <string name="unicode">UniCode</string>
	  
	   <string name="radio_9600">9600</string>
    <string name="radio_11520">115200</string>
    <string name="ibc">IBC</string>
	
	<string name="actCmdLine_name">CMD line mode</string>
	<string name="actCmdLine_input_hint">input char (press [Enter] key)</string>
	<string name="actCmdLine_msg_helper">Current end flag: %1$s,Click [send] button finished sending, at the soft keyboard;\n\n</string>
	<string name="actCmdLine_dialog_title_end_flg">Set command end flag</string>
	<string name="actCmdLine_et_hint_end_flg_val">Command end flag(HEX format)</string>
	
	<string name="actKeyBoard_name">Keyboard mode</string>
	<string name="actKeyBoard_tv_Init">Set the buttons properties, click [Set end flag]. \n</string>
	<string name="actKeyBoard_tv_set_btnname">BTN Name</string>
	<string name="actKeyBoard_tv_set_btnname_hint">button display name</string>
	<string name="actKeyBoard_tv_long_pass_freq_hint">Unit ms，must be >%1$d</string>
    <string name="actKeyBoard_set_btn_down_send_value">BTN Down </string>
    <string name="actKeyBoard_set_btn_hold_send_value">BTN Hold</string>
    <string name="actKeyBoard_set_btn_up_send_value">BTN Up</string>
    <string name="actKeyBoard_set_send_value_hint">Input send value</string>
	<string name="actKeyBoard_tv_set_keyboard_helper">Now is the keyboard setting mode, Click the button area that setting.\n Click [Buttons set complete]back to send mode.\n</string>
	<string name="actKeyBoard_msg_helper_endflg">Command line last chars is: %1$s;\n</string>
	<string name="actKeyBoard_msg_repeat_freq_set">Long-press the trigger frequency: %1$dms;</string>
	
	<string name="actAbout_name">About me</string>
	
	<string name="dialog_title_sys_err">System Error</string>
	<string name="dialog_title_alert">Alert</string>
	<string name="dialog_title_io_mode_set">IO mode selection</string>
	<string name="dialog_title_end_flg">Set end flag</string>
	<string name="dialog_title_keyboard_set">Button Function setting</string>
	<string name="dialog_title_keyboard_long_pass_frea">Long-press repeatedly freq(ms)</string>
	<string name="dialog_io_mode_input_set">Input type</string>
	<string name="dialog_io_mode_output_set">Output type</string>
	<string name="dialog_io_mode_ascii">ASCII</string>
	<string name="dialog_io_mode_hex">Hex(00-FF)</string>
	<string name="dialog_end_flg_select">Select end flag template:</string>
	<string name="dialog_end_flg_rn">Char(\'\\r\\n\')</string>
	<string name="dialog_end_flg_n">Char(\'\\n\')</string>
	<string name="dialog_end_flg_other">Other</string>
	<string name="dialog_end_flg_hex_val">HEX value of the end flag:</string>
	
	<string name="btn_ok">OK</string>
	<string name="btn_click_me">ClickMe</string>
	<string name="tv_send_area_title">Sent data area</string>
	<string name="tv_receive_area_title">Received data area</string>
	<string name="menu_close">Close</string>
	<string name="menu_clear">Clear</string>
	<string name="menu_io_mode">Set IO mode</string>
	<string name="menu_save_to_file">Save2File</string>
	<string name="menu_clear_cmd_history">Clear History</string>
	<string name="menu_set_stop_flg">Set end flag</string>
	<string name="menu_helper">Helper</string>
	<string name="menu_set_key_board_start">Buttons set</string>
	<string name="menu_set_key_board_end">Buttons set complete</string>
	<string name="menu_set_key_board_event">Set trigger mode</string>
	<string name="menu_set_button_long_pass_freq">Set Long-press freq</string>
    <string name="menu_about">About</string>
	
	<string name="device_type_bredr">BR/EDR Bluetooth</string>
	<string name="device_type_ble">Low Energy Bluetooth</string>
	<string name="device_type_dumo">Duplex mode Bluetooth</string>
	
	<string name="templet_txd">Txd: %1$dB</string>
	<string name="templet_rxd">Rxd: %1$dB</string>
	<string name="templet_hold_time">Running: %1$ds</string>
	
	<string name="msg_send_data_fail">Failed to send data</string>
	<string name="msg_not_hex_string">Invalid HEX string</string>
	<string name="msg_save_file_fail">Failed to save the file</string>
	<string name="msg_receive_data_wating">Waiting to receive&#8230;\n</string>
	<string name="msg_receive_data_stop">Receiver terminated</string>
	<string name="msg_msg_bt_connect_lost">Bluetooth device communications connection is lost, try to reconnect</string>
	<string name="msg_helper_endflg_nothing">End flag is not set. Click [Set end flag] set;\n</string>
	
	<string name="tips_click_to_hide">Click hidden</string>
	<string name="tips_click_to_show">Click show</string>
    
    <string name="printer">Printer</string>
    <string name="fps">FPS</string>
    <string name="clscr">CLSCR</string>
    <string name="sam">SAM</string>
    <string name="gps">GPS</string>
    <string name="Magneticcard">Mag Card</string>
    <string name="smartcard">Smart Card</string>
    <string name="serial">Serial Port</string>
    <string name="Connect">Connect</string>
    <string name="testprint">Test Print</string>
    <string name="logoprint">Evolute Logo</string>
    <string name="customtext">Custom Text</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="paperfeed">Paperfeed</string>
    <string name="bitmap">Bitmap Print</string>
    <string name="barcode">Barcode Print</string>
    <string name="lineprint">Line Print</string>
    <string name="capturefinger">Capture Finger</string>
    <string name="verify">Verify finger</string>
    <string name="imagecompressed">Image Compressed</string>
    <string name="verifycompresees">Verify Compressed</string>
    <string name="ImageUncompressed">Image Uncompressed</string>
    <string name="verifyUncompressed">Verify Uncompressed</string>
    <string name="verifymatch">Verify Match</string>
    <string name="readmagcard">Read MagCard</string>
    <string name="sendsession">Send Session Key</string>
     <string name="readrawdata">Read GPS Data</string>
    <string name="display1">Display Track1</string>
    <string name="display2">Dispaly Track2</string>
    <string name="selectreader">Select Reader</string>
    <string name="powerup">Power Up</string>
    <string name="powerdown">Power Down</string>
    <string name="cardstatus">Card Status</string>
    <string name="sendapdu">Send APDU</string>
    <string name="getatq">Get ATQ and UID</string>
    <string name="selectcard">Select Card</string>
    <string name="powerupcl">Reader Power Up</string>
    <string name="readerinitialize">Reader Initialize</string>
    <string name="carddetails">Card Details</string>
    <string name="sendapducl">Send APDU Command</string>
    <string name="powerdowncl">Reader Power Down</string>
    
    <string name="powerupsam"> Power Up</string>
    <string name="carddetailssam">Get Card Details</string>
    <string name="sendapdusam">Send APDU Command</string>
    <string name="powerdownsam"> Power Down</string>
    
    <string name="readbinary">Read Binary</string>
    <string name="ScanBarcode">Scan Barcode</string>
    <string name="senddata">Send Data</string>
    <string name="Returncode">ReturnCode</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Exiting Application.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="note">Note</string>
   
    <!-- Options Menu -->
    <string name="menu_quit">Quit</string>
    <string name="about">Lily Demo App Uses Lily Prowess SDK, it used to communicate to Lily which having peripherals like</string>
    <string name="information">This application has been designed to work with Evolute Systems Lily Device\n\t\t\tLily Prowess SDK is available from Evolute Systems as per request.\n\nFor more information visit</string>

    
    <string name="radio_male">9600</string>
    <string name="radio_female">115200</string>
    <string name="radio_1">Primary Smartcard Reader</string>
    <string name="radio_2">Secondary Smartcard Reader</string>
    <string name="radio_aes1">AES</string>
    <string name="radio_tdes1">TDES</string>
    <string name="radio_aes2">AES</string>
    <string name="radio_tdes2">TDES</string>
    <string name="btn_display">Display</string>
<!--    <string name="ibc">IBC</string>-->
</resources>